--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@awesome-cordova-plugins/in-app-browser": "^6.6.0",
+    "@capacitor/android": "5.7.0",
     "@capacitor/app": "5.0.7",
+    "@capacitor/browser": "^5.2.0",
     "@capacitor/core": "5.7.0",
     "@capacitor/haptics": "5.0.7",
+    "@capacitor/ios": "5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.0.0",
+    "cordova-plugin-inappbrowser": "^6.0.0",
+    "cordova-plugin-ionic-webview": "^5.0.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
