--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@capacitor/core": "5.7.0",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/ios": "5.7.0",
+    "@capacitor/keyboard": "^5.0.8",
     "@capacitor/splash-screen": "^5.0.7",
+    "@capacitor/status-bar": "^5.0.7",
     "@ionic/angular": "^7.0.0",
     "cordova-plugin-inappbrowser": "^6.0.0",
     "cordova-plugin-ionic-webview": "^5.0.1",
