--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "@ionic/angular": "^7.0.0",
     "cordova-plugin-inappbrowser": "^6.0.0",
     "cordova-plugin-ionic-webview": "^5.0.1",
+    "http-proxy-middleware": "^3.0.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "undici": "^6.21.0",
+    "vite": "^5.4.11",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-devkit/build-angular": "^17.3.10",
     "@angular-eslint/builder": "^17.0.0",
     "@angular-eslint/eslint-plugin": "^17.0.0",
     "@angular-eslint/eslint-plugin-template": "^17.0.0",
